[gd_scene load_steps=9 format=3 uid="uid://yclgl22kcddo"]

[ext_resource type="Script" path="res://scripts/door.gd" id="1_amrb6"]
[ext_resource type="ArrayMesh" uid="uid://hmnv1vuocfan" path="res://resources/models/all/door_frame.res" id="6_wih57"]
[ext_resource type="PackedScene" uid="uid://c56dtreab5jbu" path="res://resources/models/all/AnimatedWireDoor.res" id="7_aubli"]
[ext_resource type="Script" path="res://scripts/animated_wire_door.gd" id="8_shdi4"]
[ext_resource type="AudioStream" uid="uid://bspn5kya8b3as" path="res://assets/sounds/zipper-in.ogg" id="9_rkpy7"]
[ext_resource type="AudioStream" uid="uid://woothjlgynhv" path="res://assets/sounds/zipper-out.ogg" id="10_0f0mh"]

[sub_resource type="BoxShape3D" id="BoxShape3D_exyx2"]
size = Vector3(0.2, 1.5, 0.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_826a0"]
size = Vector3(0.6, 1.5, 0.05)

[node name="Door" type="Node3D"]
script = ExtResource("1_amrb6")

[node name="Offset" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)

[node name="StaticBody3D" type="StaticBody3D" parent="Offset"]

[node name="FrameCollisionShape3D" type="CollisionShape3D" parent="Offset/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0.75, 0)
shape = SubResource("BoxShape3D_exyx2")

[node name="FrameCollisionShape3D2" type="CollisionShape3D" parent="Offset/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 0.75, 0)
shape = SubResource("BoxShape3D_exyx2")

[node name="DoorCollisionShape3D" type="CollisionShape3D" parent="Offset/StaticBody3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
shape = SubResource("BoxShape3D_826a0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Offset"]
mesh = ExtResource("6_wih57")
skeleton = NodePath("../..")

[node name="AnimatedWireDoor" parent="Offset" instance=ExtResource("7_aubli")]
unique_name_in_owner = true
script = ExtResource("8_shdi4")

[node name="CloseAudio3D" type="AudioStreamPlayer3D" parent="Offset"]
unique_name_in_owner = true
stream = ExtResource("9_rkpy7")
attenuation_model = 3
volume_db = -6.0
max_distance = 10.0
bus = &"SoundFx"

[node name="OpenAudio3D" type="AudioStreamPlayer3D" parent="Offset"]
unique_name_in_owner = true
stream = ExtResource("10_0f0mh")
attenuation_model = 3
volume_db = -6.0
max_distance = 10.0
bus = &"SoundFx"
